cmake_minimum_required(VERSION 3.10)
project(CommandManager)

add_library(CommandManager CommandManager.cpp Message.hpp)
set(CMAKE_CXX_STANDARD 17)

option(BUILD_TESTING "Build the test suite" ON)
option(ENABLE_ASAN "Enable AddressSanitizer" ON)


if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    option(ENABLE_FUZZING "Enable fuzzing instrumentation" ON)
    if (BUILD_TESTING AND ENABLE_FUZZING)
        add_executable(FuzzTest FuzzTest.cpp Message.hpp FuzzTest.cpp)
        target_compile_options(FuzzTest PRIVATE -fsanitize=fuzzing)
        target_link_options(FuzzTest PRIVATE -fsanitize=fuzzing)
    endif()
elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    option(ENABLE_FUZZING "Enable fuzzing instrumentation" ON)
    if (BUILD_TESTING AND ENABLE_FUZZING)
        add_executable(FuzzTest FuzzTest.cpp Message.hpp FuzzTest.cpp)
        target_compile_options(FuzzTest PRIVATE /fsanitize=fuzzing)
    endif()
endif()

if(BUILD_TESTING)
    enable_testing()
    add_executable(Tests Tests.cpp Message.hpp)
    add_test(NAME AllTests COMMAND Tests)
    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
        if (ENABLE_ASAN)
            target_compile_options(Tests PRIVATE -fsanitize=address)
            target_link_libraries(Tests PRIVATE -fsanitize=address)
        endif()
    elseif(MSVC)
        if (ENABLE_ASAN)
            target_compile_options(Tests PRIVATE /fsanitize=address)
        endif()
    endif()
endif()
